@@ -1,2 +1,2 @@
-/Dancer-Plugin-Queue-MongoDB*
+/Dancer2-Plugin-Queue-MongoDB*
 .build
