@@ -1,4 +1,4 @@
-name    = Dancer-Plugin-Queue-MongoDB
+name    = Dancer2-Plugin-Queue-MongoDB
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
@@ -9,3 +9,11 @@ copyright_year   = 2012
 AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
 
+[Prereqs]
+Dancer2::Plugin::Queue = 0.003
+
+; need this for test role
+[Prereqs / TestRequires]
+Test::Roo = 0
+HTTP::Tiny = 0
+Test::TCP = 0
